<resources>
    <string name="app_name">Imprints Family Day 2024</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_connection">No Internet Connection</string>
    <string name="app_pleaseWait">Please Wait Loading...</string>
    <string name="app_ok">OK</string>
    <string name="app_Code"></string>
    <string name="back_msg">Do you want to go back?</string>
    <string name="select_macine">Select printing Machine</string>
    <string name="change_zapping_laction">Change Zapping Location</string>
    <string name="edittext_hint_mobile_number"><font size="30">Username</font></string>
    <string name="message_error_start_intent">Oops! This Intent can not be handled.\n\nCheck that <b>PrintHand</b> or  <b>PrintHand Premium</b> application installed on your device</string>
    <string name="lbl_setting">Setting </string>
    <string name="lbl_contact">Download Configuration</string>
    <string-array name="pj_paper_kind_values">
        <item>PJ_ROLL</item>
        <item>PJ_CUT_PAPER</item>
    </string-array>
    <string name="progress_dialog_message_transfer_start">Transfer Start…</string>
    <string name="lbl_welcome">Download Welcome Voice</string>
    <string name="progress_dialog_message_communication_start">Start communication…</string>
    <string name="lbl_wating">Download Waiting Voice</string>
    <string name="lbl_Thanku">Download Thankyou Voice</string>
    <string name="lbl_signature">Please Sign Here</string>
    <string name="progress_dialog_message_setting_bluetooth_setting">Transferring Bluetooth settings </string>
    <string name="button_send_binfile">Send File</string>
    <string name="supported_device">PJ-7XX/RJ-4030Ai/RJ-2XXX</string>
    <string name="progress_dialog_message_preparing_connection">Preparing the connection…</string>
    <string name="progress_dialog_message_createData">Creating the data</string>
    <string name="progress_dialog_message_sendingData">Sending the data…</string>
    <string name="progress_dialog_message_sendingPrintingData">Sending the data…</string>
    <string name="progress_dialog_message_startPrint">Printing the data </string>
    <string name="progress_dialog_message_dataSent">The data was sent </string>
    <string name="progress_dialog_message_printed">The printing process was completed </string>
    <string name="progress_dialog_message_close_connection">Closing the connection</string>
    <string name="progress_dialog_message_set_paper">Please Set Paper</string>
    <string name="progress_dialog_message_cooling_start">Printer cooling start</string>
    <string name="progress_dialog_message_cooling_end">Printer cooling end</string>
    <string name="progress_dialog_message_waiting_peel">Wait for peeling label</string>
    <string name="progress_dialog_message_sending_template">File transferring</string>
    <string name="progress_dialog_message_getting_bluetooth_setting">Getting Bluetooth settings </string>
    <string name="progress_dialog_message_removing_template">Removing templates </string>
    <string name="progress_dialog_message_getting_template">Getting template list </string>
    <string name="error_message_weong_os">Android OS is not supported</string>
    <string name="error_message_no_usb">USB device is not found</string>
    <string name="error_message_runtime">Runtime error occurred </string>
    <string name="error_message_none">Succeeded</string>
    <string-array name="power_mode_array">
        <item>(NO CHANGE)</item>
        <item>Connection time priority</item>
        <item>Standard</item>
        <item>Power-saving mode priority</item>
    </string-array>
    <string name="no_network_device">No Net Printer Found</string>
    <string name="no_bluetooth_device">No Bluetooth Printer Found</string>
    <string name="unable_access">Unable Access…</string>
    <string name="mac_address_value">Set the number of mac address </string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Yourname</string>
    <string name="hint_phoneNo">Phone Number</string>
    <string name="hint_organization">Organization</string>
    <string name="hint_Purpose">Purpose</string>
    <string name="hint_phoneNobadge">Phone Number</string>
    <string name="bluetooth_printer_list_title_label">Bluetooth Printer</string>
    <string name="hint_Picture_visitor">Picture of Visitor</string>
    <string name="hint_search">Enter name of the person you want to meet</string>
    <string name="hint_searchcourier">Enter name of the Person</string>
    <string name="hint_other">Others(Please Specify)</string>
    <string name="hint_companyname">CompanyName</string>
    <string name="btn_login">Login</string>
    <string name="btn_Submit">Submit</string>
    <string name="btn_Print">Print</string>
    <string name="btn_agree">Agree</string>
    <string name="btn_checkout">CheckOut</string>
    <string name="message_empty_EMAIL">PLEASE FILL YOUR EMAIL</string>
    <string name="message_empty_PASSWORD">PLEASE FILL YOUR PASSWORD</string>
    <string name="msg_validemail">EMAIL IS INVALID</string>
    <string name="Chk_Remember">Remember Me</string>
    <string name="msg_errorName">PLEASE FILL YOUR NAME</string>
    <string name="msg_errormobile">PLEASE FILL YOUR PHONE NO</string>
    <string name="msg_errorOrganiztion">PLEASE FILL THE ORGANIZATION</string>
    <string name="msg_errorPurpose">PLEASE FILL THE PURPOSE</string>
    <string name="msg_error10mobile">PLEASE FILL THE MOBILE NUMBER IN 10 DIGIT</string>
    <string name="msg_errorcheckin"> PLEASE FILL VALID NUMBER WHICH YOU FILL ON CHECK-IN</string>
    <string name="msg_loginfailure">Incorrect Username or Password</string>
    <string name="msg_Error">PLEASE FILL THE</string>
    <string name="lbl_checkout">Checkout</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_want">Want to Meet</string>
    <string name="lbl_courier">Courier</string>
    <string name="lbl_ReqSign">Required Signature</string>
    <string name="lbl_DropIn">DropIn</string>
    <string name="lbl_Live">Live Photo Camera</string>
    <string name="lbl_customCourier">Custom</string>
    <string name="lbl_thankuMsg"> THANK YOU FOR VISIT. \n HAVE A GOOD DAY !</string>
    <string name="lbl_beenhere">Been here before?</string>
    <string name="slidetounlock_label"> Slide To Check-In</string>
    <string name="slidetounlock_label_default"> Slide To Check-In</string>
    <string name="lbl_msg_CWelcome">Thankyou. Please drop your package on reception.</string>
    <string name="lbl_msg_VWelcome">We have informed your contact. Please wait in the Lobby. </string>
    <string name="URL_APP">https://events.godreamcast.com/imprints_family_day_2024/api/</string>
    <string name="URL_redeem">https://mumbaiethnicexpo.in/api/redeem</string>
    <string name="URL_Login">app_login/</string>
    <string name="URL_getData">getdata.php?</string>
    <string name="URL_addvisitorinfo">addvisitorinfo.php?</string>
    <string name="URL_checkout">checkout.php?</string>
    <string name="URL_addcourierinfo">addcourierinfo.php?</string>
    <string name="URL_getvisitorinfo">getvisitorinfo.php?</string>
    <string name="URL_checkoutcourier">checkoutcourier.php?</string>
    <string name="txt_Tapcheckin">Tap to Check-In</string>
    <string name="txt_Tapcheckinguest">Tap to Check-In</string>
    <string name="txt_title">Guest Badge</string>
    <string name="lbl_msg_guest">Thankyou for signing our Guestbook</string>
    <string name="menu_settings">Settings</string>
    <string name="button_print">Print</string>
    <string name="weburl">http://192.168.40.116/adidasstorelaunch/print.php</string>
    <string name="button_printer_settings">Printer Settings</string>
    <string name="button_transfer_template">Transfer Template</string>
    <string-array name="yes_no_entries">
        <item>yes</item>
        <item>no</item>
    </string-array>
    <string-array name="yes_no_value">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string name="tethering_title">Tethering</string>
    <string name="button_select_file">Select File</string>
    <string name="button_select">Select</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_get_list">Get List</string>
    <string name="button_bluetooth_settings">Bluetooth Settings</string>
    <string name="button_network_settings">Network Settings</string>
    <string name="button_device_settings">Device Settings</string>
    <string name="pj_700_series">PJ-700 Series</string>
    <string name="mw_series">MW Series</string>
    <string name="file_explorer_title">File Explorer</string>
    <string name="button_printer_status">Printer Status</string>
    <string name="text_select_pdz">Select a pdz or blf file</string>
    <string name="text_transfer">Transfer</string>
    <string name="text_select_image">Select image/prn file</string>
    <string name="text_input_data">Input Data:</string>
    <string name="text_template_Index">Index:</string>
    <string name="text_template_name">Name:</string>
    <string name="text_template_text">Text:</string>
    <string name="text_template_key">Template Key:</string>
    <string name="text_template_replace_texts">Replace Texts:</string>
    <string name="text_select_pdf">Select a pdf file</string>
    <string name="text_pdf_pages_start">Start Page:</string>
    <string name="text_pdf_pages_end">End Page:</string>
    <string name="chkbox_multiple_select">Multiple Select</string>
    <string name="chkbox_all_pages">All pages</string>
    <string name="text_print_image">Print Image/Prn File</string>
    <string name="text_print_pdf">Print Pdf File</string>
    <string name="text_print_template">Print Template</string>
    <string name="text_transfer_manager">Manage Templates</string>
    <string name="text_transfer_pdz">Transfer Template File</string>
    <string name="text_device_setting">Device Settings</string>
    <string name="text_remove_template">Remove Template File</string>
    <string name="text_not_exit_template">Template does not exit.</string>
    <string name="UnableAccess">Unable Access…</string>
    <string name="noNetDevice">No Net Printer Found</string>
    <string name="setting_printer">Basic Settings</string>
    <string name="setting_alignment">Set Alignment</string>
    <string name="setting_PJ">Set PocketJet Parameter</string>
    <string name="printer_title">Printer</string>
    <string name="printer_text">Select a destination printer</string>
    <string name="setting_label">Settings</string>
    <string name="about_label">About</string>
    <string name="about_title">Brother Print Sdk Demo</string>
    <string name="about_text">Ver.3.0.3\n© 2016 Brother Industries, Ltd.\n</string>
    <string name="netPrinterListTitle_label">Net Printer</string>
    <string name="progressDialogMessage_preparingConnection">Preparing the connection…</string>
    <string name="progressDialogMessage_createData">Creating the data</string>
    <string name="progressDialogMessage_sendingData">Sending the data…</string>
    <string name="progressDialogMessage_sendingPrintingData">Sending the data…</string>
    <string name="progressDialogMessage_startPrint">Printing the data </string>
    <string name="progressDialogMessage_dataSent">The data was sent </string>
    <string name="profile_settings">Profile Settings</string>
    <string name="select_printer">Select Printer</string>
    <string name="select_font">Select Font Family</string>
    <string name="currently_selected">Currently Selected</string>
    <string name="select_card">Print Contact Card </string>
    <string name="scan_your_code">Scan Your QR Code</string>
    <string name="show_your_qr"><![CDATA[Show your QR code & print the badge]]></string>
    <string name="welcometo">WELCOME TO</string>
</resources>