<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_back_c">


    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_25dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/welcometo"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/imgCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_marginHorizontal="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@drawable/round_corner10_solid_whitecolor"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo"/>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottiemain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/dimen_250dp"
        app:layout_constraintBottom_toTopOf="@+id/txtScanQr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCard"
        app:lottie_autoPlay="true"
        app:lottie_fileName="qr_scan_new.json"
        app:lottie_loop="true"
        app:lottie_speed="1"/>

    <TextView
        android:id="@+id/txtScanQr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/scan_your_code"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_32sp"
        app:layout_constraintBottom_toTopOf="@+id/txtShowYourQr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtShowYourQr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_35dp"
        android:fontFamily="@font/popins_regular"
        android:gravity="center"
        android:text="@string/show_your_qr"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_25sp"
        app:layout_constraintBottom_toTopOf="@+id/llOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_35dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnScan">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/txtOr"
            app:layout_constraintEnd_toStartOf="@+id/txtOr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtOr"/>

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dimen_10dp"
            android:text="OR"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/txtOr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtOr"
            app:layout_constraintTop_toTopOf="@+id/txtOr"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/dimen_30dp"
        android:layout_marginBottom="@dimen/dimen_25dp"
        android:background="@drawable/corner_blue"
        android:backgroundTint="@color/white"
        android:text="Scan Now"
        android:textAllCaps="false"
        android:textColor="#3F2E88"
        android:textSize="@dimen/textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>