<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.activity.login.ProfileSettingActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_7dp"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:padding="@dimen/dimen_5dp"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:fontFamily="@font/popins_medium"
                android:text="@string/profile_settings"
                android:textColor="@color/black2"
                android:textSize="@dimen/dimen_20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgBack"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imgRefresh"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginVertical="@dimen/dimen_7dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:padding="@dimen/dimen_5dp"
                android:src="@drawable/ic_refresh"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imgLogout"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black2"/>

            <ImageView
                android:id="@+id/imgLogout"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginVertical="@dimen/dimen_7dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:padding="@dimen/dimen_5dp"
                android:src="@drawable/ic_logout"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/red" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:background="@color/gray1"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:fontFamily="@font/popins_medium"
            android:gravity="center"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/dimen_22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/consToolBar"/>


        <TextView
            android:id="@+id/txtAppDeviceID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/popins_medium"
            android:gravity="center"
            android:text="sdasd"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/dimen_22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAppName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtAppDeviceID">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consSelectContactCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                android:background="@drawable/round_corner20_outline_width2_appcolor">

                <TextView
                    android:id="@+id/txtSelectCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:fontFamily="@font/popins_medium"
                    android:text="@string/select_card"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/dimen_22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/customSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_20dp"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:thumb="@drawable/thumb"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:track="@drawable/track"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consSelectPrinter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_25dp"
                android:background="@drawable/round_corner20_outline_width2_appcolor">

                <TextView
                    android:id="@+id/txtSelectPrinter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:fontFamily="@font/popins_medium"
                    android:text="@string/select_printer"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/dimen_22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/imgLeftBack"
                    android:layout_width="@dimen/dimen_40dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_marginVertical="@dimen/dimen_20dp"
                    android:layout_marginEnd="@dimen/dimen_15dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/primary_color"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtSelectedPriter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:fontFamily="@font/popins_medium"
                android:gravity="center"
                android:text="@string/currently_selected"
                android:textColor="@color/black2"
                android:textSize="@dimen/dimen_16sp"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consSelectFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_25dp"
                android:background="@drawable/round_corner20_outline_width2_appcolor">

                <TextView
                    android:id="@+id/txtSelectFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:fontFamily="@font/popins_medium"
                    android:text="@string/select_font"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/dimen_22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/imgLeftBackF"
                    android:layout_width="@dimen/dimen_40dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_marginVertical="@dimen/dimen_20dp"
                    android:layout_marginEnd="@dimen/dimen_15dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/primary_color"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtSelectedFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:fontFamily="@font/popins_medium"
                android:gravity="center"
                android:text="@string/currently_selected"
                android:textColor="@color/black2"
                android:textSize="@dimen/dimen_16sp"/>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>